Upgrading pom to target JDK 11.